now able to see diagnosis frame

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -13,6 +13,7 @@
 			<h:panelGroup rendered="#{chronicleBean.newStoryButtonVisible}"><ui:include src="composites/button.xhtml"/></h:panelGroup>
 			<h:panelGroup rendered="#{chronicleBean.optionsVisible}"><ui:include src="composites/options.xhtml"/></h:panelGroup>
 			<h:panelGroup rendered="#{chronicleBean.symptomVisible}"><ui:include src="composites/symptom.xhtml"/></h:panelGroup>
+			<h:panelGroup rendered="#{chronicleBean.diagnosisVisible}"><ui:include src="composites/diagnosis.xhtml"/></h:panelGroup>
 		</div>
 	</div>
 </ui:define>
