now able too see action form

--- a/Medizinplattform/WebContent/chronicle.xhtml
+++ b/Medizinplattform/WebContent/chronicle.xhtml
@@ -14,6 +14,7 @@
 			<h:panelGroup rendered="#{chronicleBean.optionsVisible}"><ui:include src="composites/options.xhtml"/></h:panelGroup>
 			<h:panelGroup rendered="#{chronicleBean.symptomVisible}"><ui:include src="composites/symptom.xhtml"/></h:panelGroup>
 			<h:panelGroup rendered="#{chronicleBean.diagnosisVisible}"><ui:include src="composites/diagnosis.xhtml"/></h:panelGroup>
+			<h:panelGroup rendered="#{chronicleBean.actionVisible}"><ui:include src="composites/action.xhtml"/></h:panelGroup>
 		</div>
 	</div>
 </ui:define>
