some small bugfixes

--- a/Medizinplattform/WebContent/composites/options.xhtml
+++ b/Medizinplattform/WebContent/composites/options.xhtml
@@ -27,7 +27,7 @@
    					</h:commandLink>
 				</td>
 				<td>
-					<h:commandLink> 
+					<h:commandLink action="#{chronicleBean.gotoAction()}"> 
    						<h:graphicImage value="resources/img/action.gif" />
    					</h:commandLink>
 				</td>
