--- a/Medizinplattform/WebContent/composites/header.xhtml
+++ b/Medizinplattform/WebContent/composites/header.xhtml
@@ -12,7 +12,7 @@
 	<ul>
 		<h:panelGroup rendered="#{sessionBean.guest}">
 		<li>
-			<h:commandButton class="menu-button" value="Log-In" action="login.xhtml?faces-redirect=true"></h:commandButton>
+			<h:commandButton class="login-button" value="Log-In" action="login.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
 		<li>
 			<h:link value="register" outcome="registration.xhtml"></h:link>
@@ -21,7 +21,7 @@
 		
 		<h:panelGroup rendered="#{sessionBean.user}">
 		<li>
-			<h:link value="Chronicle" outcome="chronicle.xhtml"></h:link>
+			<h:commandButton class="chronicle-button" value="Chronicle" action="chronicle.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
 		</h:panelGroup>
 		
@@ -33,7 +33,7 @@
 		
 		<h:panelGroup rendered="#{sessionBean.loggedIn}">
 		<li>
-			<h:commandLink value="Log-Out" action="#{loginBean.logout()}"></h:commandLink>
+			<h:commandLink value="log-out" action="#{loginBean.logout()}"></h:commandLink>
 		</li>
 		</h:panelGroup>
 	</ul>
