--- a/Medizinplattform/WebContent/toManyNames.xhtml
+++ b/Medizinplattform/WebContent/toManyNames.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
@@ -26,7 +27,7 @@
 					</tr>
 					<tr>
 						<td>
-							<h:inputText styleClass="input-field" value="#{loginBean.name}" tabindex="1" label="Name">
+							<h:inputText styleClass="input-field" value="#{loginBean.name}" tabindex="1" label="Name" p:placeholder="bitte Login-Name eingeben">
 								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
 								<f:validateRequired/>
 							</h:inputText>
@@ -39,7 +40,7 @@
 					</tr>
 					<tr>
 						<td>
-							<h:inputSecret  styleClass="input-field" value="#{loginBean.password}" tabindex="2" label="Password">
+							<h:inputSecret  styleClass="input-field" value="#{loginBean.password}" tabindex="2" label="Password" p:placeholder="bitte Password eingeben">
 								<f:validateLength minimum="3" />
 								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
 								<f:validateRequired/>
