--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -11,7 +11,7 @@
 	  <div class="common-content">
 	  	Here we have our index content, which is not here right now.
 	  	Maybe some text about MediPlatt, few Screenshots and a form form registration.
-	  	Or something like that.
+	  	Or something like
 	  </div>
 	</ui:define>
 </ui:composition>
