--- a/Medizinplattform/WebContent/chronicle_components/top-left.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/top-left.xhtml
@@ -6,21 +6,9 @@
 	  xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition>
-   <div id="diagnosis">
-   <div class="frame">
-		<div class="frame-header">
-			Describe your diagnosis
-		</div>
-		<div class="frame-body">
-			description here
-		</div>
-		<div class="frame-footer">
-			<h:form>
-				<h:commandLink value="cancel"  action="#{chronicleBean.cancel()}"></h:commandLink>
-			</h:form>
-		</div>
-	</div>
-	</div>
+   <div>
+   		
+   </div>
 </ui:composition>
 	
 </html>
