--- a/Medizinplattform/WebContent/chronicle_components/bottom-middle.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/bottom-middle.xhtml
@@ -10,6 +10,7 @@
    <h:panelGroup rendered = "#{chronicleBean.listOfStoriesVisible}"><ui:include src="/chronicle_components/stories.xhtml" /></h:panelGroup>
    <h:panelGroup rendered = "#{chronicleBean.optionsVisible}"><ui:include src="/chronicle_components/options.xhtml" /></h:panelGroup>
    <h:panelGroup rendered = "#{chronicleBean.diagnosisFormVisible}"><ui:include src="/chronicle_components/diagnosis.xhtml" /></h:panelGroup>
+   <h:panelGroup rendered = "#{chronicleBean.symptomFormVisible}"><ui:include src="/chronicle_components/symptom.xhtml" /></h:panelGroup>
 </ui:composition>
 	
 </html>
