--- a/Medizinplattform/WebContent/chronicle_components/options.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/options.xhtml
@@ -19,7 +19,7 @@
 			<table>
 			<tr>
 				<td>
-					<h:commandLink> 
+					<h:commandLink action="#{chronicleBean.showSymptomForm()}"> 
    						<h:graphicImage value="resources/img/symptom.gif" />
    					</h:commandLink>
 				</td>
