--- a/Medizinplattform/WebContent/chronicle_components/options.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/options.xhtml
@@ -30,7 +30,7 @@
    					</h:commandLink>
 				</td>
 				<td>
-					<h:commandLink> 
+					<h:commandLink action="#{chronicleBean.showActionForm()}"> 
    						<h:graphicImage value="resources/img/action.gif" />
    					</h:commandLink>
 				</td>
