--- a/Medizinplattform/WebContent/password-restoration.xhtml
+++ b/Medizinplattform/WebContent/password-restoration.xhtml
@@ -8,7 +8,7 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	
+	<h:outputText value="Ihre E-Mail Adresse: "/>
 	</ui:define>
 </ui:composition>
 </html>
