ABC Suche funktioniert, muss noch weiter geleitet werden zu ReadStories

--- a/Medizinplattform/WebContent/abcSuche.xhtml
+++ b/Medizinplattform/WebContent/abcSuche.xhtml
@@ -14,56 +14,45 @@
 	<div>
 	<p>Andere Erkrankungen</p>
 	<h:form id="buttons">
-		<h:commandButton action="#{abcSuche.editAction}" value="A"><f:param name="action" value="A" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="B"><f:param name="action" value="B" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="C"><f:param name="action" value="C" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="D"><f:param name="action" value="D" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="E"><f:param name="action" value="E" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="F"><f:param name="action" value="F" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="G"><f:param name="action" value="G" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="H"><f:param name="action" value="H" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="I"><f:param name="action" value="I" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="J"><f:param name="action" value="J" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="K"><f:param name="action" value="K" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="L"><f:param name="action" value="L" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="M"><f:param name="action" value="M" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="N"><f:param name="action" value="N" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="O"><f:param name="action" value="O" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="P"><f:param name="action" value="P" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="Q"><f:param name="action" value="Q" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="R"><f:param name="action" value="R" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="S"><f:param name="action" value="S" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="T"><f:param name="action" value="T" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="U"><f:param name="action" value="U" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="V"><f:param name="action" value="V" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="W"><f:param name="action" value="W" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="X"><f:param name="action" value="X" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="Y"><f:param name="action" value="Y" /></h:commandButton>
-		<h:commandButton action="#{abcSuche.editAction}" value="Z"><f:param name="action" value="Z" /></h:commandButton>
-	</h:form>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="A"><f:param name="action" value="A" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="B"><f:param name="action" value="B" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="C"><f:param name="action" value="C" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="D"><f:param name="action" value="D" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="E"><f:param name="action" value="E" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="F"><f:param name="action" value="F" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="G"><f:param name="action" value="G" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="H"><f:param name="action" value="H" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="I"><f:param name="action" value="I" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="J"><f:param name="action" value="J" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="K"><f:param name="action" value="K" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="L"><f:param name="action" value="L" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="M"><f:param name="action" value="M" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="N"><f:param name="action" value="N" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="O"><f:param name="action" value="O" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="P"><f:param name="action" value="P" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="Q"><f:param name="action" value="Q" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="R"><f:param name="action" value="R" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="S"><f:param name="action" value="S" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="T"><f:param name="action" value="T" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="U"><f:param name="action" value="U" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="V"><f:param name="action" value="V" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="W"><f:param name="action" value="W" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="X"><f:param name="action" value="X" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="Y"><f:param name="action" value="Y" /></h:commandButton>
+		<h:commandButton action="#{abcSucheBean.editAction}" value="Z"><f:param name="action" value="Z" /></h:commandButton>
+	<h:dataTable value="#{krankheiten.outputListe}" var="l">
+		<h:column>
+   			<h:link value="#{l}" outcome="readStories" action="#{readStoriesBean.param}" style="color:black">
+   			<f:param name="about" value="aaa" />	
+   			</h:link>
+   		</h:column>
+   	</h:dataTable>
+   	</h:form>
 	<hr/>
-	<h:outputText value="#{abcSuche.text}" style="font-weight:bold" />
-	<br/><br/>
-	<p>Hier werden die Links auf Erkrankungen angezeigt</p>
 	
 	
-	
+   	
 	</div>
-	
-   		<h:dataTable value="#{krankheiten.diagnosenList}" var="d">
-   			<h:column>
-   				<f:facet name="header">Diagnose Id</f:facet>
-   				#{d.diagnoseId}
-   			</h:column>
-   			<h:column>
-   				<f:facet name="header">Diagnose</f:facet>
-   				#{d.diagnose}
-   			</h:column>
-    		</h:dataTable>
-
-
-
-
 	</ui:define>
 </ui:composition>
 </html>
