--- a/Medizinplattform/WebContent/password-restoration.xhtml
+++ b/Medizinplattform/WebContent/password-restoration.xhtml
@@ -8,13 +8,13 @@
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	<h:outputText value="Ihre E-Mail Adresse: "/>
+	<h:outputText value="Geben Sie Ihre E-Mail-Adresse bitte ein: "/>
 	<h:form>
-		<h:inputText value="#{emailRestore.mailTo}"/>
-		<h:commandButton action="#{emailRestore.testEmail}" value="Weiter" />
-	<br/>
+		<h:inputText value="#{emailRestoreBean.email}" />
+		<h:commandButton action="#{emailRestoreBean.param}" value="Weiter" />
+	<br/><br/>
 	</h:form>
-	<h:outputText value="111 #{emailRestore.mailTo}"/>
+	<h:outputText value="#{emailRestoreBean.email}"/>
 	</ui:define>
 </ui:composition>
 </html>
