updates auf der index seite (logo is nich final...nur mal so) main menü eingefügt, vllt ändere ich noch die knöpfe; header angepasst(belibig erweiterbar) ; css rumgespielt;

--- a/Medizinplattform/WebContent/composites/header.xhtml
+++ b/Medizinplattform/WebContent/composites/header.xhtml
@@ -11,6 +11,7 @@
 	<h:form>
 	<ul>
 		<h:panelGroup rendered="#{sessionBean.guest}">
+		
 		<li>
 			<h:commandButton class="login-button" value="Log-In" action="login.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
@@ -20,6 +21,12 @@
 		</h:panelGroup>
 		
 		<h:panelGroup rendered="#{sessionBean.user}">
+		<li>
+		<h:commandButton class="MainMenu-button" value="Hauptmenü" action="MainMenu.xhtml?faces-redirect=true"></h:commandButton>
+		</li>
+		<li>
+		<h:commandButton class="chronicle-button" value="Suche" action="abcSuche.xhtml?faces-redirect=true"></h:commandButton>
+		</li>
 		<li>
 			<h:commandButton class="chronicle-button" value="Chronicle" action="chronicle.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
