--- a/Medizinplattform/WebContent/login.xhtml
+++ b/Medizinplattform/WebContent/login.xhtml
@@ -5,54 +5,36 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
 
 <div class="common-content" id="login">
-        <h:form>
-             <h:messages style="color:red"/>
-        <div class="frame">
-			<div class="frame-header">
-				Melden Sie sich an
-			</div>
-			<div class="frame-body">
-				<table>
-					<tr>
-						<td>
-							Login
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h:inputText styleClass="input-field" value="#{loginBean.name}" tabindex="1" label="Name" p:placeholder="bitte Login eingeben">
-								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
-								<f:validateRequired/>
-							</h:inputText>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Password <span id="forgot-password">(<h:link value="forgot it?" outcome="password-restoration.xhtml" tabindex="4"></h:link>)</span>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h:inputSecret  styleClass="input-field" value="#{loginBean.password}" tabindex="2" label="Password" p:placeholder="bitte Password eingeben">
-								<f:validateLength minimum="3" />
-								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
-								<f:validateRequired/>
-							</h:inputSecret>
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="frame-footer">
-				<h:commandButton class="form-button" value="Log-In" action="#{loginBean.login()}" tabindex="3"></h:commandButton>
-			</div>		
-		</div>
-	</h:form>
+        <h:form id="form">  
+  
+   			<p:panel id="panel" header="Login">  
+  
+       			<p:messages id="msgs"/>  
+  
+        			<h:panelGrid columns="3">  
+            		<h:outputLabel for="email" value="E-main: *" />  
+            		<p:inputText id="email" value="#{loginBean.name}" required="true" label="E-mail">  
+                		<f:validateLength minimum="2" />  
+            		</p:inputText>  
+            		<p:message for="email" display="icon"/>
+            		<h:outputLabel for="password" value="Password *" />  
+            		<p:password id="password" value="#{loginBean.password}" label="Password" required="true">  
+                		<f:validateLength minimum="2" />  
+                	<p:ajax update="msgPassword" event="keyup" />  
+            		</p:password>  
+            		<p:message for="password" id="msgPassword" display="icon"/>  
+  
+        			</h:panelGrid>  
+  					<p:commandButton id="btn" value="Login" update="panel" actionListener="#{loginBean.login}"/>  
+    		</p:panel>  
+  
+	</h:form>  
 </div>
 </ui:define>
 </ui:composition>
