--- a/Medizinplattform/WebContent/admin.xhtml
+++ b/Medizinplattform/WebContent/admin.xhtml
@@ -14,7 +14,7 @@
 <div id="user_table">
 	<h:form id="form_new_user">  
   
-    <p:panel id="panel" header="New User">  
+    <p:panel id="panel" header="User Anlegen">  
   
         <p:messages id="msgs"/>  
   
