vorläufig text geändert...werd noch mehr schreiben

--- a/Medizinplattform/WebContent/index.xhtml
+++ b/Medizinplattform/WebContent/index.xhtml
@@ -13,8 +13,11 @@
 	  <br/>
 	    <br/>
 	      <br/>
-	       
-	  	Hier werde ich ne kleine erklärung schreiben usw, kommt morgen
+	<h1>    
+	 Willkommen bei MediPlatt
+	 </h1>  
+	 Die einfachste Methode über ihre Krankheitsgeschichte Buch zu führen
+	 
 	  	  <br/>
 	  	    <br/>
 	  	      <br/>
