--- a/Medizinplattform/WebContent/MainMenu.xhtml
+++ b/Medizinplattform/WebContent/MainMenu.xhtml
@@ -23,7 +23,7 @@
 	  	<br />
 	  	
 	 <ul id="cont">
-    	<li><a href="chronicle.xhtml?faces-redirect=true" title="Hier können Sie ihre persönliche Krankheits-Chronik einsehen und bearbeiten">Chronicle</a></li>
+    	<li><a href="chronicle.xhtml?faces-redirect=true" title="Hier können Sie ihre persönliche Krankheits-Chronik einsehen und bearbeiten">Chronik</a></li>
     	<li><a href="abcSuche.xhtml?faces-redirect=true" title="Hier können Sie nach Krankheiten suchen">Suche</a></li>
   		<li><a href="#"  title="hier gehts zum button 1">Seite 3</a></li>
    		<li><a href="#" title="Hier gehts zum button 2">
