--- a/Medizinplattform/WebContent/composites/header.xhtml
+++ b/Medizinplattform/WebContent/composites/header.xhtml
@@ -16,7 +16,7 @@
 			<h:commandButton class="login-button" value="Log-In" action="login.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
 		<li>
-			<h:link value="register" outcome="registration.xhtml"></h:link>
+			<h:link value="Registrieren" outcome="registration.xhtml"></h:link>
 		</li>
 		</h:panelGroup>
 		
@@ -28,7 +28,7 @@
 		<h:commandButton class="chronicle-button" value="Suche" action="abcSuche.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
 		<li>
-			<h:commandButton class="chronicle-button" value="Chronicle" action="chronicle.xhtml?faces-redirect=true"></h:commandButton>
+			<h:commandButton class="chronicle-button" value="Chronik" action="chronicle.xhtml?faces-redirect=true"></h:commandButton>
 		</li>
 		</h:panelGroup>
 		
