anpassungen fehlermeldungen, validatoren, ...

--- a/Medizinplattform/WebContent/invalid_LoginName.xhtml
+++ b/Medizinplattform/WebContent/invalid_LoginName.xhtml
@@ -13,7 +13,7 @@
 <div class="common-content" id="login">
         <h:form>
              <h:messages style="color:red"/>
-             <h style="color:red">Falsche Login-Name</h>
+             <h style="color:red">Falscher Login-Name</h>
         <div class="frame">
 			<div class="frame-header">
 				Melden Sie sich an
