--- a/Medizinplattform/WebContent/login.xhtml
+++ b/Medizinplattform/WebContent/login.xhtml
@@ -24,8 +24,8 @@
             		</p:inputText>  
             		<p:message for="email" display="icon"/>
             		<h:outputLabel for="password" value="Passwort: *" />  
-            		<p:password id="password" value="#{loginBean.password}" tabindex="2" label="Password" required="true" placeholder="Passwort">  
-                		<f:validateLength minimum="3" />  
+            		<p:password id="password" value="#{loginBean.password}" tabindex="2" label="Password" required="true" placeholder="min. 6 Zeichen a-z,0-9">  
+                		<f:validateLength minimum="6" />  
                 	<p:ajax update="msgPassword" event="keyup" />  
             		</p:password>  
             		<p:message for="password" id="msgPassword" display="icon"/>  
