--- a/Medizinplattform/WebContent/registration.xhtml
+++ b/Medizinplattform/WebContent/registration.xhtml
@@ -4,59 +4,48 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/template.xhtml">
 	<ui:define name="content">
-	
-	 <div class="common-content">  
+
+<div class="common-content" id="login">
 		<div id="registration">
 			<div id="info">
-				<h1>Join MediPlatt</h1>
-				<h3>The best way to monitor your health.</h3>
+				<h1> MediPlatt</h1>
+				<h3> Der Beste Weg ihre Gesundheit zu überwachen</h3>
 			</div>
-			
-		<div id="register-form">
-			<h:form>
-			  <h:messages style="color:red"/>
-				<table>
-					<tr>
-						<td>
-							Choose a name
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h:inputText value="#{registerBean.name}" label="Name">
-								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
-								<f:validateRequired/>
-							</h:inputText>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Create a password
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h:inputSecret value="#{registerBean.password}" label="Password">
-								<f:validateLength minimum="3" />
-								<f:validateRegex pattern="[a-zA-Z0-9]*"/>
-								<f:validateRequired/>
-							</h:inputSecret>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h:commandButton value="register" action="#{registerBean.registerUser()}"></h:commandButton>
-						</td>
-					</tr>
-				</table>
-			</h:form>
 			</div>
-	   </div>
-	 </div>   
-	</ui:define>
+        <h:form id="form">  
+  
+   			<p:panel id="panel" header="Registration">  
+  
+       			<p:messages id="msgs"/>  
+  
+        			<h:panelGrid columns="3">  
+            		<h:outputLabel for="email" value="E-mail: *" />  
+            		<p:inputText id="email" value="#{registerBean.name}" tabindex="1" required="true" label="E-mail" placeholder="MaxMuster@gmail.com">  
+                		<f:validateLength minimum="3" />  
+                		<f:validateRequired/>
+            		</p:inputText>  
+            		<p:message for="email" display="icon"/>
+            		
+            		<h:outputLabel for="password" value="Passwort: *" />  
+            		<p:password id="password" value="#{registerBean.password}" tabindex="2" label="Password" required="true" placeholder="min. 6 Zeichen a-z,0-9">  
+                		<f:validateLength minimum="6" /> 
+                		<f:validateRequired/>
+                		 
+                	<p:ajax update="msgPassword" event="keyup" />  
+            		</p:password>  
+            		<p:message for="password" id="msgPassword" display="icon"/>  
+  
+        			</h:panelGrid>  
+  					<p:commandButton id="btn" value="Registrieren" update="panel" action="#{registerBean.registerUser()}"/>  
+    		</p:panel>  
+  
+	</h:form>  
+</div>
+</ui:define>
 </ui:composition>
 </html>
