--- a/Medizinplattform/WebContent/admin.xhtml
+++ b/Medizinplattform/WebContent/admin.xhtml
@@ -49,7 +49,9 @@
      	<p:growl id="messages" showDetail="true"/>  
   
     	<p:dataTable id="dataTable" var="user" value="#{adminBean.users}" widgetVar="usersTable" editable="true" editMode="cell" rowKey="#{user.id}"
-            emptyMessage="Keine User gefunden" filteredValue="#{adminBean.filteredUsers}" selection="#{adminBean.selectedUsers}" style="width:100%">  
+            emptyMessage="Keine User gefunden" filteredValue="#{adminBean.filteredUsers}" selection="#{adminBean.selectedUsers}" style="width:100%" paginator="true" rows="10"  
+                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
+                 rowsPerPageTemplate="5,10,15">  
   		
   		<p:ajax event="cellEdit" listener="#{adminBean.onCellEdit}" update=":form_user_list:messages" />  
   		
