--- a/Medizinplattform/WebContent/chronicle_components/story.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/story.xhtml
@@ -12,19 +12,18 @@
 		<p:growl id="growl" showDetail="true"/>   
 		<p:panel id="selected-story" header="#{chronicleBean.renderTitleFromSelectedStory()} #{chronicleBean.renderDateFromSelectedStory()}" closable="true" closeSpeed="500" widgetVar="panel">  
   
-        <p:ajax event="close" listener="#{chronicleBean.handleClose}" update="growl" />
-  
-       		<h:commandButton value="New entry" action="#{chronicleBean.showOptions()}"></h:commandButton>
+       	    <p:ajax event="close" listener="#{chronicleBean.handleClose}" update="growl" />
+       		<p:commandButton value="Neuer Eintrag" actionListener="#{chronicleBean.showOptions}" ajax="false" />  
        		
        		<ui:repeat value="#{chronicleBean.allEntries}" var="entry" varStatus="status">
 					<h:panelGroup rendered="#{textBean.isDiagnosis(entry)}">
-						<div><i>#{textBean.getDate(entry)} </i><b>#{textBean.getAuthor(entry)}</b> diagnoses <b>#{textBean.getDiagnosis(entry)}</b></div>
+						<div><i>#{textBean.getDate(entry)}</i> #{textBean.getAuthor(entry)} diagnostiziert #{textBean.getDiagnosis(entry)}</div>
 					</h:panelGroup>
 					<h:panelGroup rendered="#{textBean.isSymptom(entry)}">
-						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{sessionBean.canSeeChronicleOf}</b> has <b>#{textBean.getSymptomText(entry)}</b></div>
+						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getSymptomText(entry)}</b></div>
 					</h:panelGroup>
 					<h:panelGroup rendered="#{textBean.isAction(entry)}">
-						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getAmount(entry)}</b> of <b>#{textBean.getAction(entry)}</b> <i>#{textBean.getPeriod(entry)}</i></div>
+						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getAmount(entry)}</b> <b>#{textBean.getAction(entry)}</b> <i>#{textBean.getPeriod(entry)}</i></div>
 					</h:panelGroup>
 			</ui:repeat>  
           
