--- a/Medizinplattform/WebContent/chronicle_components/stories.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/stories.xhtml
@@ -16,12 +16,12 @@
 	       		<p:commandButton value="Neue Geschichte hinzufügen" actionListener="#{chronicleBean.createStory}" update="messages" ajax="false" />  
 	       		<div style="height:12px"></div>
 	       		<ui:repeat value="#{chronicleBean.allStories}" var="story" varStatus="status">
-					<div style="width:100%;height:24px">	
+					<div style="width:100%;height:24px;background-color:#{chronicleBean.getColorForStory(story)}">	
 						<div style="text-align:left;width:50%;float:left">
 							<h:commandLink value="#{chronicleBean.renderDateFrom(story)} : #{chronicleBean.renderTitleFrom(story)}" action="#{chronicleBean.select(story)}"></h:commandLink>
 						</div>
 						<div style="text-align:right;width:50%;float:left">
-							l&ouml;schen
+							<h:commandLink value="löschen" action="#{chronicleBean.deleteStory(story)}"></h:commandLink>
 						</div>
 					</div>		
 				</ui:repeat>
