--- a/Medizinplattform/WebContent/chronicle_components/story.xhtml
+++ b/Medizinplattform/WebContent/chronicle_components/story.xhtml
@@ -29,10 +29,20 @@
 						<div><i>#{textBean.getDate(entry)}</i> #{textBean.getStatus(entry)}</div>
 					</h:panelGroup>
 					<h:panelGroup rendered="#{textBean.isDiagnosis(entry)}">
-						<div><i>#{textBean.getDate(entry)}</i> #{textBean.getAuthor(entry)} diagnostiziert #{textBean.getDiagnosis(entry)}</div>
+						<div><i>#{textBean.getDate(entry)}</i> #{textBean.getAuthor(entry)} diagnostiziert #{textBean.getDiagnosis(entry)} </div>
 					</h:panelGroup>
 					<h:panelGroup rendered="#{textBean.isSymptom(entry)}">
-						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getSymptomText(entry)}</b></div>
+						<div></div>
+						<div style="width:100%;height:24px">	
+						<div style="text-align:left;width:50%;float:left">
+							<i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getSymptomText(entry)}</b> 
+						</div>
+						<div style="text-align:right;width:50%;float:left">
+							<h:commandLink value="bearbeiten" action="#{chronicleBean.editEntry(entry)}"></h:commandLink>
+							<span>&nbsp;</span>
+							<h:commandLink value="löschen" action="#{chronicleBean.deleteEntry(entry)}"></h:commandLink>
+						</div>
+					</div>
 					</h:panelGroup>
 					<h:panelGroup rendered="#{textBean.isAction(entry)}">
 						<div><i>#{textBean.getDate(entry)}  #{textBean.getTime(entry)} </i><b>#{textBean.getAmount(entry)}</b> <b>#{textBean.getAction(entry)}</b> <i>#{textBean.getPeriod(entry)}</i></div>
