als kommentar in registration.xhtml und reaisterbean und user bean sachen für gewicht, alter, größe usw eingefügt.. brauch aber noch hilfe das so zu machen das es für die datenbank funktioniert

--- a/Medizinplattform/WebContent/registration.xhtml
+++ b/Medizinplattform/WebContent/registration.xhtml
@@ -56,7 +56,7 @@
     <label>Geburtstag:</label><br></br>
     <input type="date" name="textinput2" id="textinput2"></input><br></br>
     <label>Gewicht:</label><br></br>
-    <input type="text" name="textinput2" id="textinput2" placeholder="in Kilogramm"></input><br></br>
+    <input type="text" name="textinput2" id="gewicht" value="" placeholder="in Kilogramm"></input><br></br>
     <label>Größe:</label><br></br>
     <input type="text" name="textinput2" id="textinput2" placeholder="in Zentimeter"></input><br></br>
 
